5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1793_1615.log
== SUBMITION (2019-05-30 18:52:45) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.451976
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
5
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
5
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:48) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:52:53) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.441417
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
5
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
5
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:03) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.480967
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
5
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
5
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:16) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.418475
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
5
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
5
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:19) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.611057
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
pontos do jogador 1:pontos do jogador 2 :5
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
pontos do jogador 1:pontos do jogador 2 :5
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:19) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.749809
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
pontos do jogador 1:pontos do jogador 2 :5
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
pontos do jogador 1:pontos do jogador 2 :5
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:56) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(sum(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.404149
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
7
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
12
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
9
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:31) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(sum(v1))
print(sum(v2))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:54:31) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 40 and v2[i] == 20):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 40 and v2[i]== 40):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 10):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 20):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 10 and v2[i]== 0):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]== 0):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 20 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 40):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 10 and v2[i]== 20):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 0 and v2[i]== 20):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]== 0 and v2[i]==10):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(sum(v1))
print(sum(v2))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.50887
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
7
5
EMPATE
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
12
12
EMPATE
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
pontos do jogador 1:pontos do jogador 2 :9
13
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:16:17) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1 and v2[i] == 2):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 1):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 2):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 3 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]>= 4):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 2):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 2):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]==3):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(sum(v1))
print(sum(v2))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:19) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1 and v2[i] == 2):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 1):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 2):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 3 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]>= 4):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 2):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 2):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]==3):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(sum(v1))
print(sum(v2))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.464086
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
7
5
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
12
12
JOGADOR UM
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
9
13
JOGADOR UM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:16:31) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1 and v2[i] == 2):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 1):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 2):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 3 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]>= 4):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 2):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 2):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]==3):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:34) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1 and v2[i] == 2):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 1):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 2):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 3 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]>= 4):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 2):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 2):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]==3):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.533503
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
5
JOGADOR UM
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
5
JOGADOR UM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:17:26) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1 and v2[i] == 2):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 1):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 2):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 3 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]>= 4):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 2):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 2):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]==3):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:17:27) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1 and v2[i] == 2):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 1 and v2[i]== 1):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 3):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 2):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 3 and v2[i]>= 4):
		valor_1 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]>= 4):
		valor_1 = 0
		valor_2 = 0
	elif(v1[i]== 2 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 1):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]== 3 and v2[i]== 2):
		valor_2 = 1
		valor_1 = 0
	elif(v1[i]>=4 and v2[i]== 2):
		valor_2 = 1
		valor_2 = 0
	elif(v1[i]>=4 and v2[i]==3):
		valor_2 = 1
		valor_1 = 0
	soma_1 = soma_1 + valor_1
	soma_2 = soma_2 + valor_2
	i = i + 1
print(size(v1))
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.464512
-- TEST CASE 1:
---- input:
[3,2,1,1]
[1,2,1,1]
---- correct output:
JOGADOR DOIS
---- user output:
4
JOGADOR DOIS
-- TEST CASE 2:
---- input:
[3,2,1,5,1]
[1,5,1,2,3]
---- correct output:
EMPATE
---- user output:
5
JOGADOR UM
-- TEST CASE 3:
---- input:
[3,2,1,1,2]
[4,2,1,3,3]
---- correct output:
JOGADOR UM
---- user output:
5
JOGADOR UM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:29:40) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1):
	soma_1 = soma_1 + 40
	elif(v1[i]==2):
	soma_1 = soma_1 + 20
	elif(v1[i]==3):
	soma_1 = soma_1 + 10
	elif(v1[i]>=4):
	soma_1 = soma_1 + 0
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.147483
-- ERROR:
  File "/home/codebench/codes/1793/1615/main.py", line 11
    soma_1 = soma_1 + 40
         ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:29:40) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1):
	soma_1 = soma_1 + 40
	elif(v1[i]==2):
	soma_1 = soma_1 + 20
	elif(v1[i]==3):
	soma_1 = soma_1 + 10
	elif(v1[i]>=4):
	soma_1 = soma_1 + 0
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
File "XXXX", line 11
    soma_1 = soma_1 + 40
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:29:42) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1):
	soma_1 = soma_1 + 40
	elif(v1[i]==2):
	soma_1 = soma_1 + 20
	elif(v1[i]==3):
	soma_1 = soma_1 + 10
	elif(v1[i]>=4):
	soma_1 = soma_1 + 0
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- EXECUTION TIME:
0.165651
-- ERROR:
  File "/home/codebench/codes/1793/1615/main.py", line 11
    soma_1 = soma_1 + 40
         ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:29:42) 
-- CODE:
from numpy import *
v1 = array(eval(input("pontos do jogador 1:")))
v2 = array(eval(input("pontos do jogador 2 :")))
i = 0
soma_1 = 0
soma_2 = 0
valor_1 = 0
valor_2 = 0
while(i<size(v1)):
	if(v1[i]== 1):
	soma_1 = soma_1 + 40
	elif(v1[i]==2):
	soma_1 = soma_1 + 20
	elif(v1[i]==3):
	soma_1 = soma_1 + 10
	elif(v1[i]>=4):
	soma_1 = soma_1 + 0
if(soma_1 == soma_2 ):
	print("EMPATE")
if(soma_1 > soma_2):
	print("JOGADOR UM")
if(soma_2 > soma_1):
	print("JOGADOR DOIS")
	

-- ERROR:
File "XXXX", line 11
    soma_1 = soma_1 + 40
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
